--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
+  "name": "Kaczenski Stock App",
   "version": "0.1.3",
-  "description": "A sample Node.js app using Express 4",
+  "description": "A Node.js app using JSDOM",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
